kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
